src/objects/MMMGR__c.object
<CustomObject>
    <description>(MBI) - MMD - Plan Sponsor - Pension Plan Manager information</description>
    <fields>
        <fullName>DOLLARS__c</fullName>
        <label>Dollars Managed ($000)</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Firm_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm Link</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plan Managers - MMD</relationshipLabel>
        <relationshipName>MMD_Plan_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOC__c</fullName>
        <label>Assets Managed (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Currency_Conversion_Code__c</fullName>
        <formula>MMD_Pension_Plan__r.CURR_CODE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Currency Conversion Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MANAGER_NO__c</fullName>
        <label>Manager MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Mgr__c</fullName>
        <formula>IF( OR(MANAGER_NO__c =&quot;9601323&quot;,MANAGER_NO__c =&quot;9000310&quot;,MANAGER_NO__c =&quot;9004360&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MFS Mgr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MGRNAME__c</fullName>
        <label>Manager Name &amp; City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Firm_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MMD Firm Profile</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Plan Managers</relationshipLabel>
        <relationshipName>Plan_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMD_Pension_Plan__c</fullName>
        <label>MMD Pension Plan</label>
        <referenceTo>MMPLANS__c</referenceTo>
        <relationshipLabel>MMD Plan Managers</relationshipLabel>
        <relationshipName>MMD_Plan_Managers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MMD_Web_Access_Link__c</fullName>
        <formula>HYPERLINK(&quot;http://products.mmdwebaccess.com/member/MIM_Profile.aspx?ids=&quot; &amp; ID__c ,&apos;Click Here&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMD Web Access Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_WebAccess_Link__c</fullName>
        <formula>HYPERLINK(&quot;http://products.mmdwebaccess.com/member/MIM_Profile.aspx?ids=&quot; &amp; ID__c ,&apos;Click Here&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager WebAccess Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PER_MANAGED__c</fullName>
        <label>Percent Managed</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <formula>MMD_Pension_Plan__r.PLAN_NAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <formula>MMD_Pension_Plan__r.Plan_Type_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEQ_NO__c</fullName>
        <label>Plan Sequence #</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEAR_HIRED__c</fullName>
        <label>Year Hired</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>MMD Plan Manager</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Plan Managers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>